fixes to Nav - background, absolute positioning of center-el, smaller search bar on smaller screens

--- a/static/nav.css
+++ b/static/nav.css
@@ -1,135 +1,147 @@
 /* new nav, removing all JS */
 
-    nav {
-        width:100vw;
-        max-width:100vw;
-        left: 0px;
-        margin-right: 0px;
-        position:fixed;
-        top:0px;
-        height:2.5em;
-        z-index:210;
-        border-bottom: 2px solid var(--a);
-        margin-bottom;0em;
-        background:var(--b);
-        padding: 0px;
-    }
+nav {
+    width: 100vw;
+    max-width: 100vw;
+    left: 0px;
+    margin-right: 0px;
+    position: fixed;
+    top: 0px;
+    height: 2.5em;
+    z-index: 210;
+    border-bottom: 2px solid var(--a);
+    background: var(--b);
+    padding: 0px;
+}
 
-    nav .center-el {
-        margin: 0 auto;
-        color:var(--a);
-        font-size:0.8em;
-        text-decoration:none !important;
-    }
-    .dropdown {
-        float: left;
-        overflow: hidden;
-        background: none;
-        font-size: 16px;
-        border: none;
-        outline: none;
-        margin: 0;
-        text-align: left;
-        margin-left: -10px;
-        min-width:12em;
-    }
+nav .center-el {
+    margin: 0 auto;
+    color: var(--a);
+    font-size: 0.8em;
+    text-decoration: none !important;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    max-width: fit-content;
+}
+.dropdown {
+    float: left;
+    overflow: hidden;
+    background: none;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    margin: 0;
+    text-align: left;
+    margin-left: -10px;
+    min-width: 12em;
+}
 
-    #dropdown-icon {
-        text-decoration: none !important;
-        font-size: 2.5em;
-        margin: 4px;
-        padding: 0;
-        font-weight: 100;
-        overflow: visible;
-        max-height: 1em;
-        display: flex;
-        align-items: center;
-        background: none;
-    }
+#dropdown-icon {
+    text-decoration: none !important;
+    font-size: 2.5em;
+    margin: 4px;
+    padding: 0;
+    font-weight: 100;
+    overflow: visible;
+    max-height: 1em;
+    display: flex;
+    align-items: center;
+    background: none;
+}
 
-    /* Dropdown content (hidden by default) */
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: var(--b);
-        margin-top:-3px;
-        min-width: 12em;
-        z-index: 100;
-        padding: 0em;
-        border: 2px solid var(--a);
-        border-top: 0px solid var(--b);
-    }
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--b);
+    margin-top: -3px;
+    z-index: 100;
+    padding: 0em;
+    border: 2px solid var(--a);
+    border-top: 0px solid var(--b);
+    max-width: fit-content;
+}
 
-    /* Links inside the dropdown */
-    .dropdown-content a {
-        float: none;
-        color: var(--t);
-        background: var(--b);
-        padding: 12px 16px;
-        text-decoration: none !important;
-        display: block;
-        text-align: left;
-        cursor:pointer !important;
-        pointer-events: auto !important;
-        z-index: 999;
-    }
+/* Links inside the dropdown */
+.dropdown-content a {
+    float: none;
+    color: var(--t);
+    background: var(--b);
+    padding: 12px 16px;
+    text-decoration: none !important;
+    display: block;
+    text-align: left;
+    cursor: pointer !important;
+    pointer-events: auto !important;
+    z-index: 999;
+}
 
-    /* Add a grey background color to dropdown links on hover */
-    .dropdown-content a:hover {
-        color: var(--a !important);
-        filter: brightness(1.1);
-        font-weight:bolder
-    }
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+    color: var(--a !important);
+    filter: brightness(1.1);
+    font-weight: bolder;
+}
 
-    /* Show the dropdown menu on hover */
-    .dropdown:focus .dropdown-content,
-    .dropdown:active .dropdown-content {
-        display: block;
-        pointer-events: auto !important;
-    }
+/* Show the dropdown menu on hover */
+.dropdown:focus .dropdown-content,
+.dropdown:active .dropdown-content {
+    display: block;
+    pointer-events: auto !important;
+}
 
-    #search-container {
-        text-align:right;
-        text-decoration:none !important;
-        width:12em;
-        padding:0.1em;
-    }
+#search-container {
+    text-align: right;
+    text-decoration: none !important;
+    width: 12em;
+    padding: 0.1em;
+}
 
-    #lightswitch {
-        text-align:center;
-    }
+#lightswitch {
+    text-align: center;
+}
 
-    #maxwidth {
-        width:95%;
-        max-width:80ch;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-left:auto;
-        margin-right:auto;
-    }
+#maxwidth {
+    width: 95%;
+    max-width: 80ch;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-    #search-container:focus-within #search-dropdown {
-            display: block;
-        }
+#search-container:focus-within #search-dropdown {
+    display: block;
+}
 
-    #search-input {
-        border:none;
-        outline: none !important;
-        background:transparent;
-        width:80%;
-        margin-left:-1em;
-        font-size:0.8em;
-        font-family:monospace;
-        text-align:left;
-    }
+#search-input {
+    border: none;
+    outline: none !important;
+    background: transparent;
+    width: 80%;
+    margin-left: -1em;
+    font-size: 0.8em;
+    font-family: monospace;
+    text-align: left;
+}
 
-    #submit-search {
-        display:inline;
-        max-width: 1em;
-        padding:0.2em;
-        border:none;
-        background:none;
-        color:var(--a);
-        margin: 0.3em;
+#submit-search {
+    display: inline;
+    max-width: 1em;
+    padding: 0.2em;
+    border: none;
+    background: none;
+    color: var(--a);
+    margin: 0.3em;
+}
+
+@media screen and (max-width: 500px) {
+    #search-dropdown {
+        font-size: 0.9em;
     }
+}
